--- a/style.css
+++ b/style.css
@@ -43,10 +43,9 @@ body {
     max-width: 500px; /* 최대 너비 설정 */
 }
 
-.contact-container {
+.contact-container, .disqus-container {
     margin-top: 30px; /* 위쪽 여백 추가 */
 }
-
 
 .theme-toggle {
     text-align: right;
